--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "classnames": "^2.3.2",
+    "firebase": "^10.5.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
