--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bradgarropy/next-google-analytics": "^1.0.2",
     "@headlessui/react": "^1.7.17",
     "classnames": "^2.3.2",
     "firebase": "^10.5.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
+    "react-international-phone": "^4.0.3",
+    "react-phone-number-input": "^3.3.7"
   },
   "devDependencies": {
     "@types/node": "^20",
