--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-gtm-module": "^2.0.11",
     "react-input-mask": "^2.0.4",
     "react-international-phone": "^4.0.3",
     "react-phone-number-input": "^3.3.7"
@@ -24,8 +25,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-gtm-module": "^2.0.2",
     "@types/react-input-mask": "^3.0.4",
     "autoprefixer": "^10",
+    "encoding": "^0.1.13",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
